# vet_clinic

./: CMakeLists.txt  main.cpp
auth/: authservice.cpp  authservice.h
database/: database.cpp  database.h  models.h
server/: server.cpp  server.h
